--- a/index.html
+++ b/index.html
@@ -1,9 +1,72 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>My Webpage</title>
-    </head>
-    <body>
-        Hello, world!
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PORTFOLIO</title>
+
+    <!--Bootstrap css file-->
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/all.css">
+    <!--custom css file-->
+        <link rel="stylesheet" href="css/style.css">
+    
+</head>
+<body>
+    
+<!-- Start navbar-->
+    <nav id="navbar">
+        <ul>
+            <li><a href="#welcome-section">About</a></li>
+            <li><a href="#projects">Work</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+<!--End navbar-->
+
+<!------ start welcome section-------->
+
+    <section id="welcome-section">
+        <h1>Hey, I am Vaibhav </h1>
+        <p>a web developer</p>
+    </section>
+
+<!------ end welcome section-------->
+
+<!-----start project section------>
+
+    <section id="projects-section">
+        <h2 class="project-header"></h2>
+        <div class="projects-grid">
+
+        </div>
+    </section>
+
+<!------end project section-------->
+
+<!------start contacts section--->
+    <section id="contact">
+      <div id="contacts-header">
+        <h2>Let's work together</h2>
+        <p>How do you take your coffee?</p>
+      </div>
+      <div class="contact-links">
+          <a href="https://www.facebook.com/" 
+             target="_blank"
+             class="btn contact-details"><i class="fab fa-facebook-square"></i>  Facebook</a>
+          <a href="https://github.com/"
+            target="_blank"
+            class="btn contact-details"><i class="fab fa-github"></i>  Github</a>
+          <a href="https://twitter.com/"
+             target="_blank"
+             class="btn contact-details"><i class="fab fa-twitter"></i>  Twitter</a>
+          <a href="https://www.google.com/gmail/"
+             target="_blank"
+             class="btn contact-details"><i class="fas fa-at"></i>  Send a mail</a>
+          <a href="tel:9582244053"
+            class="btn contact-details"><i class="fas fa-mobile-alt"></i>  Call me</a>
+      </div>
+    </section>
+<!------end contacts section----->
+</body>
 </html>
